examples/nginx-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-pod
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
