examples/nginx-deployment/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-haproxy-ingress
  labels:
    name: nginx-haproxy-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: nginx.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
