examples/nginx-deployment/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.local`)
      kind: Rule
      services:
        - name: nginx-svc
          port: 80
